infrastructure/system/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: homelab
      namespace: kube-system
  hostnames:
    - keycloak.home.didcot
  rules:
    - backendRefs:
        - name: keycloak
          port: 80
